tests/semantic/pass/top-level-int.tiger
let
	type int = string
in
	for i := 0 to 0 do ()
end
