tests/semantic/fail/for-break-body-function.tiger
for i := 0 to 0 do
	let
		function f() = break
	in
	end
